# agentic-data-repair

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_leads.csv  sample.csv  sample_leads.csv  semantic_test.csv  test_semantic.csv  test_semantic_30.csv
outputs/: failed.json  repaired.json  valid.json
outputs_test_fixed/: failed.json  repaired.json  valid.json
src/data_repair/: __init__.py  agent.py  cli.py  generator.py  processor.py  schemas.py
src/semantic_pipeline/: agent.py  cli.py  processor.py  schemas.py
