[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-data-pipeline-agent"
version = "2.0.0"
description = "Semantic extraction pipeline using Pydantic AI - extracts structured data from unstructured text"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10",
    "pydantic-ai>=0.0.15",
    "typer[all]>=0.12",
    "rich>=13.7",
    "email-validator>=2.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_pipeline"]

[project.scripts]
pipeline = "semantic_pipeline.cli:app"
